--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server": "^3.6.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.5"
   },
