--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "admin",
+    "password": "12345678",
     "database": "chat",
     "host": "127.0.0.1",
     "dialect": "mysql"
