--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.3",
+    "classnames": "^2.3.1",
     "graphql": "^16.2.0",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
