--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.1",
     "graphql": "^16.2.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
