--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "apollo-server": "^3.6.1",
+    "apollo-server": "^2.25.2",
     "bcryptjs": "^2.4.3",
-    "graphql": "^16.2.0",
+    "express": "^4.17.2",
+    "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.5"
