--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "apollo-server": "^2.25.2",
+    "apollo-server-express": "^2.25.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
