--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server-express": "^2.25.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
